// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ any props 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

<div
  class="c0 className"
  id="id"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ buttons 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c6 {
  margin-top: 16px;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  border: solid 2px #D5D5D6;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c9:active {
  top: 1px;
}

.c9:hover {
  color: #2B2D33;
  border: solid 2px #2B2D33;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  padding: 0;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c11:active {
  top: 1px;
}

.c11:hover {
  color: #000000;
}

.c10 {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c10:not(:last-of-type) {
  margin-right: 8px;
}

.c10 > svg {
  display: block;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: -16px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  vertical-align: middle;
  width: 100%;
}

.c8 {
  position: relative;
  margin-bottom: 16px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
  width: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c8:last-child {
  margin-right: 0;
}

@media (max-width:100000px) {
  .c0 .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 .c2 .c4 {
    margin-bottom: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4 c5"
    >
      Alert title
    </div>
    <div>
      &gt;This is a test alert message.
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <button
            class="c9"
            type="button"
          >
            <span
              class="c10"
            >
              Complete
            </span>
          </button>
        </div>
        <div
          class="c8"
        >
          <button
            class="c11"
            type="button"
          >
            <span
              class="c10"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert w/ compact 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

@media (max-width:10000px) {
  .c0 .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 .c2 .c4 {
    margin-bottom: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4 c5"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 2`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #E8F7F4;
  color: #008E7D;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M11.707 15.207l5-5-1.414-1.414L11 13.086l-2.793-2.793-1.414 1.414 3.5 3.5a1 1 0 001.414 0z"
      />
      <path
        clip-rule="evenodd"
        d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zM4 12a8 8 0 1116 0 8 8 0 01-16 0z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 3`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #FEF3EC;
  color: #CB662F;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 4`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #FDEEEE;
  color: #C74952;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ dynamic 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
  width: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o icon 1`] = `
.c2 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o title 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;
